# BirdingPlanner

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  README_CN.md  README_EN.md  check_status.py  demo_ebird_integration.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup_env.sh  test_different_species.py  test_ebird_integration.py  test_env.py  test_trip_reports.py
agents/: bird_info_agent.py  content_writer.py  route_planner.py  tier_classifier.py
ai_enhanced/social_captions/: caption_01.txt
ai_test_trip/: trip_data.json  trip_plan.md
ai_trip_test/: trip_data.json
ai_trip_test/story_cards/: story_02.txt
demo/: demo_hybrid_architecture.py  demo_multi_day_planning.py
demo/multi_day/demo_multi_day/: demo_plan.json  demo_plan.md
demo_ai_output/: trip_data.json  trip_plan.md
demo_ai_output/social_captions/: caption_03.txt
demo_ai_output/story_cards/: story_03.txt
docs/: api_keys.md  architecture.md
local_birding/: social_captions.txt  trip_plan.md
mcp_server/: main.py
mixed_birding/: social_captions.txt  trip_plan.md
mixed_birding/story_cards/: story_02_Cerulean_Warbler.txt
rare_birding/: social_captions.txt  trip_plan.md
rare_birding/story_cards/: story_02_Baltimore_Oriole.txt
src/: __init__.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  database.py  logging.py  settings.py
src/core/: __init__.py  birding_planner.py  content_service.py  ebird_service.py  route_service.py  species_service.py
src/mcp/: __init__.py  agents.py  ebird_agent.py  orchestrator.py  server.py
src/models/: __init__.py  route.py  species.py  trip.py
test_ai_optimized/: trip_data.json
test_rare_species/story_cards/: story_01_Cerulean_Warbler.txt  story_02_Golden-winged_Warbler.txt
test_single_species/: trip_plan.md
test_trip/: trip_plan.md
test_trip/story_cards/: story_01_American_Robin.txt  story_02_Northern_Cardinal.txt
test_two_species/: trip_plan.md
test_two_species/story_cards/: story_02_Northern_Cardinal.txt
tests/: __init__.py  test_models.py  test_multi_day_planning.py
tests/ai_enhanced/: trip_data.json
tests/ai_enhanced/social_captions/: caption_02.txt
tests/local_birding/story_cards/: story_01_American_Robin.txt  story_02_Northern_Cardinal.txt  story_03_Blue_Jay.txt
tests/mixed_birding/story_cards/: story_01_American_Robin.txt
tests/rare_birding/story_cards/: story_01_Cerulean_Warbler.txt  story_03_Scarlet_Tanager.txt
tests/test_ai_optimized/: trip_plan.md
tests/test_ai_optimized/story_cards/: story_01.txt
tests/test_cli_multi_day/: multi_day_plan.json  multi_day_plan.md
tests/test_detailed_multi_day/: multi_day_plan.json  multi_day_plan.md
tests/test_multi_day/: multi_day_plan.json  multi_day_plan.md
tests/test_rare_species/: social_captions.txt  trip_plan.md
tests/test_single_species/: social_captions.txt
tests/test_single_species/story_cards/: story_01_American_Robin.txt
tests/test_trip/: social_captions.txt  trip_plan.md
tests/test_two_species/story_cards/: story_01_American_Robin.txt
